testcases/semantic_error/null2.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f: i32;

    fn foo(x: i32)
    {
    }

    fn bar()
    {
        foo(null);
    }
}
